cues impartite in seturi separate pre si post unice

--- a/project_new.ipynb
+++ b/project_new.ipynb
@@ -266,7 +266,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 72,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -300,24 +300,36 @@
         "  nsco_tpl = sorted(nsco_tpl, key=lambda x: x[1])\n",
         "  usco_tpl = sorted(usco_tpl, key=lambda x: x[1])\n",
         "\n",
-        "  for i in range(min(len(neg_tpl), len(nsco_tpl))):\n",
+        "  for i,j in zip(range(len(neg_tpl)), range(len(nsco_tpl))):\n",
+        "    if neg_tpl[i][1] - nsco_tpl[j][2] > 10:\n",
+        "        i -= 1\n",
+        "        continue\n",
+        "    elif nsco_tpl[j][1] - neg_tpl[i][2] > 10:\n",
+        "        j -= 1\n",
+        "        continue\n",
         "    if neg_tpl[i][1] > nsco_tpl[i][1]:\n",
         "      neg_post_cues.append(neg_tpl[i][0])\n",
         "    else:\n",
         "      neg_pre_cues.append(neg_tpl[i][0])\n",
-        "  for i in range(min(len(unc_tpl), len(nsco_tpl))):\n",
-        "    if unc_tpl[i][1] > nsco_tpl[i][1]:\n",
+        "\n",
+        "  for i,j in zip(range(len(unc_tpl)), range(len(usco_tpl))):\n",
+        "    if unc_tpl[i][1] - usco_tpl[j][2] > 10:\n",
+        "        i -= 1\n",
+        "        continue\n",
+        "    elif usco_tpl[j][1] - unc_tpl[i][2] > 10:\n",
+        "        j -= 1\n",
+        "        continue\n",
+        "    if unc_tpl[i][1] > usco_tpl[i][1]:\n",
         "      unc_post_cues.append(unc_tpl[i][0])\n",
         "    else:\n",
         "      unc_pre_cues.append(unc_tpl[i][0])\n",
-        "\n",
         "\n",
         "  return neg_pre_cues, neg_post_cues, unc_pre_cues, unc_post_cues"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 76,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -326,19 +338,71 @@
         "neg_post_cues = set()\n",
         "unc_pre_cues = set()\n",
         "unc_post_cues = set()\n",
+        "\n",
+        "neg_pre_dict = {}\n",
+        "neg_post_dict = {}\n",
+        "unc_pre_dict = {}\n",
+        "unc_post_dict = {}\n",
+        "\n",
         "for document in training_set:\n",
         "    neg_pre, neg_post, unc_pre, unc_post = create_cue_sets(document)\n",
+        "    for word in neg_pre:\n",
+        "        if word in neg_pre_dict:\n",
+        "            neg_pre_dict[word] += 1\n",
+        "        else:\n",
+        "            neg_pre_dict[word] = 1\n",
+        "    for word in neg_post:\n",
+        "        if word in neg_post_dict:\n",
+        "            neg_post_dict[word] += 1\n",
+        "        else:\n",
+        "            neg_post_dict[word] = 1\n",
+        "    for word in unc_pre:\n",
+        "        if word in unc_pre_dict:\n",
+        "            unc_pre_dict[word] += 1\n",
+        "        else:\n",
+        "            unc_pre_dict[word] = 1\n",
+        "    for word in unc_post:\n",
+        "        if word in unc_post_dict:\n",
+        "            unc_post_dict[word] += 1\n",
+        "        else:\n",
+        "            unc_post_dict[word] = 1\n",
         "    neg_pre_cues.update(neg_pre)\n",
         "    neg_post_cues.update(neg_post)\n",
         "    unc_pre_cues.update(unc_pre)\n",
         "    unc_post_cues.update(unc_post)\n",
+        "\n",
+        "\n",
+        "neg_pre_blacklist = set()\n",
+        "neg_post_blacklist = set()\n",
+        "unc_pre_blacklist = set()\n",
+        "unc_post_blacklist = set()\n",
+        "\n",
+        "for word in neg_pre_cues:\n",
+        "    if word in neg_post_cues:\n",
+        "        if neg_pre_dict[word] > neg_post_dict[word]:\n",
+        "            neg_post_blacklist.add(word)\n",
+        "        else:\n",
+        "            neg_pre_blacklist.add(word)\n",
+        "\n",
+        "for word in unc_pre_cues:\n",
+        "    if word in unc_post_cues:\n",
+        "        if unc_pre_dict[word] > unc_post_dict[word]:\n",
+        "            unc_post_blacklist.add(word)\n",
+        "        else:\n",
+        "            unc_pre_blacklist.add(word)\n",
+        "\n",
+        "neg_pre_cues = neg_pre_cues - neg_pre_blacklist\n",
+        "neg_post_cues = neg_post_cues - neg_post_blacklist\n",
+        "unc_pre_cues = unc_pre_cues - unc_pre_blacklist\n",
+        "unc_post_cues = unc_post_cues - unc_post_blacklist\n",
+        "\n",
         "\n",
         "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [
         {
@@ -347,17 +411,11 @@
           "text": [
             "E in ambele: negativa\n",
             "E in ambele: niega\n",
-            "E in ambele: ausencia de\n",
             "E in ambele: sin\n",
-            "E in ambele: afebril\n",
-            "E in ambele: retiro\n",
             "E in ambele: negativo\n",
             "E in ambele: no\n",
             "E in ambele: inespecificos\n",
-            "E in ambele: negativos\n",
-            "E in ambele: negativas\n",
-            "E in ambele: sense\n",
-            "E in ambele: inespecifico\n"
+            "E in ambele: negativos\n"
           ]
         }
       ],
