--- a/dl_preprocessing.ipynb
+++ b/dl_preprocessing.ipynb
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +981,7 @@
     "    def __init__(self,vocab_dim_ch,vocab_dim_pos,vocab_dim_word, max_sent_legnth, max_Xch_len,len_X_casing, embedding_dim_ch_pos,embedding_dim, hidden_dim, n_layers,tag_dim, drop_prob=0.):\n",
     "        super(Model, self).__init__()\n",
     "\n",
-    "        self.fc1 = nn.Linear(hidden_dim,hidden_dim)\n",
+    "        self.fc1 = nn.Linear(hidden_dim*2,hidden_dim)\n",
     "        self.fc2 = nn.Linear(hidden_dim, tag_dim)\n",
     "\n",
     "        self.prelu = nn.PReLU()\n",
@@ -1001,7 +1001,7 @@
     "        self.dropout = nn.Dropout(0.4)\n",
     "        self.hidden_dim = hidden_dim\n",
     "        self.n_layers = n_layers\n",
-    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, n_layers, batch_first=True, bidirectional=False)\n",
+    "        self.lstm = nn.LSTM(embedding_dim, hidden_dim, n_layers, batch_first=True, bidirectional=True)\n",
     "\n",
     "\n",
     "    def forward(self, x, h, c=None):\n",
@@ -1056,7 +1056,7 @@
     "    def init_hidden(self, batch_size):\n",
     "        \" Initialize the hidden state of the LSTM to zeros\"\n",
     "        weight = next(self.parameters()).data\n",
-    "        return weight.new(self.n_layers, batch_size, self.hidden_dim).zero_(), weight.new(self.n_layers, batch_size, self.hidden_dim).zero_()"
+    "        return weight.new(self.n_layers * 2, batch_size, self.hidden_dim).zero_(), weight.new(self.n_layers * 2, batch_size, self.hidden_dim).zero_()"
    ]
   },
   {
@@ -1109,15 +1109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'epoch': 0, 'batch': 0, 'loss': 2.598714590072632}\n",
-      "{'epoch': 0, 'batch': 30, 'loss': 0.05944317206740379}\n"
+      "{'epoch': 0, 'batch': 0, 'loss': 2.62660551071167}\n"
      ]
     },
     {
@@ -1127,7 +1126,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[356], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;241m13\u001b[39m\n\u001b[0;32m     15\u001b[0m model \u001b[38;5;241m=\u001b[39m Model(vocab_dim_ch,vocab_dim_pos,vocab_dim_word, longest_sentence, max_Xch_len,len_X_casing, embedding_dim_ch_pos,embedding_dim, hidden_dim, n_layers,tag_dim, drop_prob)\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m---> 16\u001b[0m losses \u001b[38;5;241m=\u001b[39m \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_dataloader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[359], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;241m13\u001b[39m\n\u001b[0;32m     15\u001b[0m model \u001b[38;5;241m=\u001b[39m Model(vocab_dim_ch,vocab_dim_pos,vocab_dim_word, longest_sentence, max_Xch_len,len_X_casing, embedding_dim_ch_pos,embedding_dim, hidden_dim, n_layers,tag_dim, drop_prob)\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m---> 16\u001b[0m losses \u001b[38;5;241m=\u001b[39m \u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_dataloader\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_epochs\u001b[49m\u001b[43m)\u001b[49m\n",
       "Cell \u001b[1;32mIn[355], line 34\u001b[0m, in \u001b[0;36mtrain\u001b[1;34m(dataloader, model, batch_size, num_epochs)\u001b[0m\n\u001b[0;32m     30\u001b[0m y \u001b[38;5;241m=\u001b[39m y\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     32\u001b[0m loss \u001b[38;5;241m=\u001b[39m criterion(y_pred, y)\n\u001b[1;32m---> 34\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     35\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m batch\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m30\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
       "File \u001b[1;32me:\\Apps\\Python\\Lib\\site-packages\\torch\\_tensor.py:525\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    515\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    516\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    517\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[0;32m    518\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    523\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[0;32m    524\u001b[0m     )\n\u001b[1;32m--> 525\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    526\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[0;32m    527\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32me:\\Apps\\Python\\Lib\\site-packages\\torch\\autograd\\__init__.py:267\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    262\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[0;32m    264\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[0;32m    265\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    266\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 267\u001b[0m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    268\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    269\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    270\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    271\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    272\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    273\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    274\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    275\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
